Updated @JoanZap urls

--- a/index.html
+++ b/index.html
@@ -64,40 +64,7 @@
                 </div>
                 </section>
                 <section>
-				 <!-- <h3>Twitter!</h3>
-                 <!-- 
-              <script charset="utf-8" src="http://widgets.twimg.com/j/2/widget.js"></script>
-<script>
-new TWTR.Widget({
-  version: 2,
-  type: 'search',
-  search: 'vuzzz',
-  interval: 30000,
-  title: 'VuzZz!',
-  subject: '',
-  width: 250,
-  height: 300,
-  theme: {
-    shell: {
-      background: '#8ec1da',
-      color: '#ffffff'
-    },
-    tweets: {
-      background: '#ffffff',
-      color: '#444444',
-      links: '#1985b5'
-    }
-  },
-  features: {
-    scrollbar: false,
-    loop: true,
-    live: true,
-    behavior: 'default'
-  }
-}).render().start();
-</script>
-</section>-->
-			</aside>
+                </aside>
 			
 		</div> <!-- #main -->
 	</div> <!-- #main-container -->
@@ -114,7 +81,7 @@ Dans la journée, il travaille en tant que consultant chez <a href="http://www.e
             <section>
                 <h3>Joan ZAPATA</h3>
                 <p>Codeur increvable dopé au <a href="http://nyan.cat">coca</a> et au <a href="http://nyan.cat">nyan.cat</a>, il était aussi <a href="http://nyan.cat">designer</a> dans une autre vie. Il aime le <a href="http://nyan.cat">code propre</a> qui marche à la première compil'. En journée, également consultant <a href="http://www.excilys.com">Excilys</a>, chez <b>JCDecaux</b>.
-				<p><a href="http://twitter.com/ShuyaInc">@ShuyaInc</a> | <a href="http://joan-zapata.fr">Site web</a></p>
+				<p><a href="http://twitter.com/JoanZap">@JoanZap</a> | <a href="http://joanzap.fr">Site web</a></p>
             </section>
             <section>
                 <h3>Pierre-Yves RICAU</h3>
